v3.2.0 BUGFIX ============== CSS:     Corrected Gap between imageURLdisplay and ChooseFromGallery button,     Provided -2em margin to ChooseFromGallery button, JS:     Beautified the TitleCase button, just like that :)

--- a/src/sass/mycss.sass
+++ b/src/sass/mycss.sass
@@ -445,9 +445,7 @@ div#base
     .file-path.validate // FILENAME display
       right: 0
       margin-top: 0
-      width: calc( 100% - 1em - 134px - 1em - 168px )
-      // background-color: lighten(Moccasin, 0%)
-      // background-color: darken(lightgray,5%)
+      width: calc( 100% - 1em - 134px - 168px )
       background-color: rgba(255, 255, 0, 0.1)
       color: #555
       font: normal 1em/1 monospace
@@ -458,11 +456,9 @@ div#base
     line-height: 1.25
     padding: .25em 1em .5em !important
     text-transform: capitalize
-    margin-top: 0
+    margin-top: -2.0em
     position: absolute
     right: 1.5em
-    // transform: translateY(-30px)
-    // left: calc( 100% - 168px )
     span
       font-size: .85em
 
